================================================
|                Version 0.9                   |
================================================
 -

BugFixes:
 -
================================================
|                Version 0.8                   |
|            Released: 2011-12-19              |
================================================
 - Added view frustum culling for shadows;
 - map: Add object rotation to all axis;
 - Created scene and sceneNode abstractions;
 - New Bounding Box class;
 - Added character info text when mouse over portrait;
 - gui: defined mouse hint for all gui objects;
 - gui: added object visibility flag;
 - Added support to MacOSX;
 - Added shader for texture splatting (splatting now can be via
   ARB extensions or GLSL shader);
 - Added money split;
 - New models;
 - New mission: Old software factory computer;
 - New maps;
 - dntMapEditor: Show mouse world coordinates;
 - dntMapEditor: grid mode alternative on object XZ move;
 - dntMapEditor: Tool to select and edit objects;
 - Using code::blocks as default IDE for Windows build;

BugFixes:
 - Fixed a bug that freezes the game when drinking a beer (thanks 
 to zerberros for the bug report);
 - Fixed a bug that won't let remove of some objects from list;
 - Fixed a bug when leveling up a skill with effects applied;
 - Fixed white-shadows on some drivers;

================================================
|                Version 0.7                   |
|            Released: 2011-02-28              |
================================================
 - New race's images;
 - New classes' images;
 - Rewrote particle systems for better generalization;
 - dntMapEditor: Using dntList and defParser for list of files;
 - dntMapEditor: Plane editor for any kind of particles;
 - heightmap2dnt: Added indoor map import (with walls);
 - Capacity to create empty (without decorations) windows;
 - Text over cursor;
 - Added instantKill percentual to weapons (aka: probability